src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>AccountingIndicator__c</fullName>
        <label>Accounting Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressNumber__c</fullName>
        <label>Address Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllocationSet__c</fullName>
        <label>Allocation Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantDesignFlag__c</fullName>
        <label>Applicant design flag</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationDescription__c</fullName>
        <label>Application Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedAmount__c</fullName>
        <label>Authorized Amount</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COInternalOrderUser__c</fullName>
        <label>User Responsible for CO Internal Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangedBy__c</fullName>
        <description>ChangedBy</description>
        <label>ChangedBy</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangedDate__c</fullName>
        <label>Changed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChangedOn__c</fullName>
        <description>ChangedOn</description>
        <label>ChangedOn</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCostCenter__c</fullName>
        <label>Client Cost Center</label>
        <length>126</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Job_Owner__c</fullName>
        <formula>Job_Owner__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Job Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenterBasicSettlement__c</fullName>
        <label>Cost center for basic settlement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <label>Responsible Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCollector__c</fullName>
        <label>Cost collector for production process PR</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostEstimateNumber__c</fullName>
        <label>Cost Estimate Number for Cost Est. w/o Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostingSheet__c</fullName>
        <label>Costing Sheet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostingVariant__c</fullName>
        <label>Costing Variant</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <description>CreatedBy</description>
        <label>CreatedBy</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedTime__c</fullName>
        <label>Time Created</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectCostCollectorIndicator__c</fullName>
        <label>Indicator: Direct cost collector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTemplateDate__c</fullName>
        <formula>CASE( 
MONTH(today()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
&quot;December&quot; 
)+ &quot; &quot; + 
TEXT(DAY (today())) + &quot;, &quot; + 
TEXT(YEAR (today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailTemplateDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnvironmentalInvestmentReason__c</fullName>
        <label>Reason for environmental investment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimating_Ready__c</fullName>
        <label>Estimating Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExcludeManualPlanning__c</fullName>
        <label>Exclude from Manual Planning</label>
        <length>245</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrderNumber__c</fullName>
        <label>External Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionalArea__c</fullName>
        <label>Functional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingCycle__c</fullName>
        <label>Funding Cycle</label>
        <length>234</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingIdentifier__c</fullName>
        <label>Funding Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLAccountBasicSettlement__c</fullName>
        <label>G/L account for basic settlement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedPlanningIndicator__c</fullName>
        <label>Indicator for Integrated Planning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestProfile__c</fullName>
        <label>Interest Profile for Project/Order Inter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestmentMeasureProfile__c</fullName>
        <label>Investment measure profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestmentObjectsScale__c</fullName>
        <label>Scale of investment objects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestmentReason__c</fullName>
        <label>Reason for Investment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Order_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadOrderNumber__c</fullName>
        <label>Lead Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadOrder__c</fullName>
        <label>Lead order</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogicalSystem__c</fullName>
        <label>Logical System</label>
        <length>245</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceActivityType__c</fullName>
        <label>Maintenance Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorProjectIndicator__c</fullName>
        <label>Major Project Indicator</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorWorkCategory__c</fullName>
        <label>Major Work Category</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultipleItemsOrder__c</fullName>
        <label>Order with multiple items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetEstimate__c</fullName>
        <label>Net Estimate</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifObjNumber__c</fullName>
        <label>NotifObjNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotificationNum__c</fullName>
        <externalId>true</externalId>
        <label>Notification Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotificationType__c</fullName>
        <label>Notification Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification Order</label>
        <referenceTo>Notifications__c</referenceTo>
        <relationshipName>Order_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <label>Notification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMEN__c</fullName>
        <label>OMEN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjNumber__c</fullName>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>ObjNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ObjectClass__c</fullName>
        <label>Object Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperativeDate__c</fullName>
        <label>Operative Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderCategory__c</fullName>
        <label>Order Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNSE</fullName>
                </value>
                <value>
                    <fullName>ESTS</fullName>
                </value>
                <value>
                    <fullName>APPR</fullName>
                </value>
                <value>
                    <fullName>PEND</fullName>
                </value>
                <value>
                    <fullName>UNSC</fullName>
                </value>
                <value>
                    <fullName>CONS</fullName>
                </value>
                <value>
                    <fullName>DOCC</fullName>
                </value>
                <value>
                    <fullName>MAPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E060 – electric distribution capital &lt;30 days</fullName>
                </value>
                <value>
                    <fullName>E070 – electric distribution capital &gt;30 days</fullName>
                </value>
                <value>
                    <fullName>E080 – electric distribution expense</fullName>
                </value>
                <value>
                    <fullName>E460 – electric distribution capital &lt;30 days (OAA)</fullName>
                </value>
                <value>
                    <fullName>E470 – electric distribution capital &gt;30 days (OAA)</fullName>
                </value>
                <value>
                    <fullName>E480 – electric distribution expense (OAA)</fullName>
                </value>
                <value>
                    <fullName>G060 – gas distribution capital construction &lt;30 days</fullName>
                </value>
                <value>
                    <fullName>G070 – gas distribution capital construction &gt;30 days</fullName>
                </value>
                <value>
                    <fullName>G080 – gas distribution expense corrective</fullName>
                </value>
                <value>
                    <fullName>G460 – gas distribution capital construction &lt;30 days (OAA)</fullName>
                </value>
                <value>
                    <fullName>G470 – gas distribution capital construction &gt;30 days (OAA)</fullName>
                </value>
                <value>
                    <fullName>G480 – gas distribution expense corrective (OAA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Notification</label>
        <referenceTo>Notifications__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrganizationalObjective__c</fullName>
        <label>Organizational Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverheadKey__c</fullName>
        <label>Overhead Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Sub_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonInchargeTelephone__c</fullName>
        <label>Telephone number of person in charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonResponsible__c</fullName>
        <label>Person responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhaseOrderClosed__c</fullName>
        <label>Phase order closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhaseOrderCompleted__c</fullName>
        <label>Phase order completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhaseOrderCreated__c</fullName>
        <label>Phase Order created</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhaseOrderReleased__c</fullName>
        <label>Phase Order released</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedClosingDate__c</fullName>
        <label>Planned closing date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedCompletionDate__c</fullName>
        <label>Planned completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedReleaseDate__c</fullName>
        <label>Planned release date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanningOrderLink__c</fullName>
        <label>Planning Order Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlantRetirements__c</fullName>
        <label>Plant Retirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostedCostCenter__c</fullName>
        <label>Cost center to which costs are actually</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessCategory__c</fullName>
        <label>Process Category (Procurement/Consumptio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessingGroup__c</fullName>
        <label>Processing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductionProcess__c</fullName>
        <label>Production Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCenter__c</fullName>
        <label>Profit Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectGTMillion__c</fullName>
        <label>Project &gt; $1 Million</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiverCostCenter__c</fullName>
        <label>Receiver Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefurbishmentOrderIndicator__c</fullName>
        <label>Refurbishment order indicator (PM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegulatoryCategory__c</fullName>
        <label>Regulatory Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegulatoryMajorWorkCategory__c</fullName>
        <label>Regulatory Major Work Category</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <label>Release date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestingCompanyCode__c</fullName>
        <label>Requesting company code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestingOrder__c</fullName>
        <label>Requesting order</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResultsAnalysisKey__c</fullName>
        <label>Results Analysis Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_NotifNumber__c</fullName>
        <description>Root_NotifNumber</description>
        <label>Root_NotifNumber</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_ObjNumber__c</fullName>
        <description>Root_ObjNumber</description>
        <label>Root_ObjNumber</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_External_Id__c</fullName>
        <description>SAP_External_Id</description>
        <externalId>true</externalId>
        <label>SAP_External_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderItemNumber__c</fullName>
        <label>Item Number in Sales Order</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderNumber__c</fullName>
        <label>Sales Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SettlementCostElement__c</fullName>
        <label>Settlement cost element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialReportingItem__c</fullName>
        <label>Special Reporting Item</label>
        <length>245</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxJurisdiction__c</fullName>
        <label>Tax Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalCompletionDate__c</fullName>
        <label>Technical Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Completion_Days__c</fullName>
        <formula>PlannedCompletionDate__c-PlannedReleaseDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Completion Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VarianceKey__c</fullName>
        <label>Variance Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBSElement__c</fullName>
        <label>Work breakdown structure element (WBS el</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkEndDate__c</fullName>
        <label>End of Work</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkStartDate__c</fullName>
        <label>Work Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkType__c</fullName>
        <label>WorkType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZORDER_URL__c</fullName>
        <label>URL to SAP ZORDER</label>
        <type>Url</type>
    </fields>
    <label>Orders</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>Notification_Order__c</columns>
        <columns>Order_Notification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Jo_Orders</fullName>
        <columns>NAME</columns>
        <columns>Notification_Order__c</columns>
        <columns>Order_Notification__c</columns>
        <columns>OrderType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>msyal</value>
        </filters>
        <label>All Jo Orders</label>
    </listViews>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>E060</fullName>
        <active>true</active>
        <description>E060 Orders</description>
        <label>E060</label>
    </recordTypes>
    <recordTypes>
        <fullName>E070</fullName>
        <active>true</active>
        <description>E070 Orders</description>
        <label>E070</label>
    </recordTypes>
    <recordTypes>
        <fullName>E080</fullName>
        <active>true</active>
        <description>E080 Orders</description>
        <label>E080</label>
    </recordTypes>
    <recordTypes>
        <fullName>G060</fullName>
        <active>true</active>
        <description>G060 Orders</description>
        <label>G060</label>
    </recordTypes>
    <recordTypes>
        <fullName>G070</fullName>
        <active>true</active>
        <description>G070 Oders</description>
        <label>G070</label>
    </recordTypes>
    <recordTypes>
        <fullName>G080</fullName>
        <active>true</active>
        <description>G080 Orders</description>
        <label>G080</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Order_Number_Restriction</fullName>
        <active>false</active>
        <errorConditionFormula>OR 
( 
NOT(ISNUMBER(Name)), 
AND(ISNUMBER(Name), LEN(Name) &lt;&gt;8) 
)</errorConditionFormula>
        <errorDisplayField>AccountingIndicator__c</errorDisplayField>
        <errorMessage>Order Number  should contain eight digits</errorMessage>
    </validationRules>
</CustomObject>